NDS-497 update HTML example code with id and name attributes

--- a/docs/pages/components/text-input.mdx
+++ b/docs/pages/components/text-input.mdx
@@ -80,24 +80,24 @@ The form group:
 <fieldset class="form-group" data-component="form-group">
 	<legend class="form-group__legend">What is your address</legend>
 	<div class="input" data-component="input">
-		<label class="input__label">Address line 1</label>
-		<input class="input__input" type="text" value="">
+		<label class="input__label" for="address-line-1">Address line 1</label>
+		<input name="address-line-1" class="input__input" id="address-line-1" type="text" value="" />
 	</div>
 	<div class="input" data-component="input">
-		<label class="input__label">Address line 1</label>
-		<input class="input__input" type="text" value="">
+		<label class="input__label" for="address-line-2">Address line 2</label>
+		<input name="address-line-2" class="input__input" id="address-line-2" type="text" value="" />
 	</div>
 	<div class="input" data-component="input">
-		<label class="input__label">Town or city</label>
-		<input class="input__input" type="text" value="">
+		<label class="input__label" for="address-town">Town or city</label>
+		<input name="address-town" class="input__input" id="address-town" type="text" value="" />
 	</div>
 	<div class="input" data-component="input">
-		<label class="input__label">County</label>
-		<input class="input__input" type="text" value="">
+		<label class="input__label" for="address-county">County</label>
+		<input name="address-county" class="input__input" id="address-county" type="text" value="" />
 	</div>
 	<div class="input" data-component="input">
-		<label class="input__label">Postcode</label>
-		<input class="input__input" type="text" value="">
+		<label class="input__label" for="address-postcode">Postcode</label>
+		<input name="address-postcode" class="input__input" id="address-postcode" type="text" value="" />
 	</div>
 </fieldset>
 ```
@@ -158,27 +158,27 @@ Add hint text to the group of text inputs to give context or help about the over
 ```
 ```html HTML
 <fieldset class="form-group" data-component="form-group">
-  <legend class="form-group__legend">What is your address</legend>
-  <p class="form-group__hint">This should be a UK address</p>
+	<legend class="form-group__legend">What is your address</legend>
+  	<p class="form-group__hint">This should be a UK address</p>
 	<div class="input" data-component="input">
-		<label class="input__label">Address line 1</label>
-		<input class="input__input" type="text" value="">
+		<label class="input__label" for="address-line-1">Address line 1</label>
+		<input name="address-line-1" class="input__input" id="address-line-1" type="text" value="" />
 	</div>
 	<div class="input" data-component="input">
-		<label class="input__label">Address line 1</label>
-		<input class="input__input" type="text" value="">
+		<label class="input__label" for="address-line-2">Address line 2</label>
+		<input name="address-line-2" class="input__input" id="address-line-2" type="text" value="" />
 	</div>
 	<div class="input" data-component="input">
-		<label class="input__label">Town or city</label>
-		<input class="input__input" type="text" value="">
+		<label class="input__label" for="address-town">Town or city</label>
+		<input name="address-town" class="input__input" id="address-town" type="text" value="" />
 	</div>
 	<div class="input" data-component="input">
-		<label class="input__label">County</label>
-		<input class="input__input" type="text" value="">
+		<label class="input__label" for="address-county">County</label>
+		<input name="address-county" class="input__input" id="address-county" type="text" value="" />
 	</div>
 	<div class="input" data-component="input">
-		<label class="input__label">Postcode</label>
-		<input class="input__input" type="text" value="">
+		<label class="input__label" for="address-postcode">Postcode</label>
+		<input name="address-postcode" class="input__input" id="address-postcode" type="text" value="" />
 	</div>
 </fieldset>
 ```
