NDS-497 update sepearate example to avoid duped ids

--- a/docs/pages/components/text-input.mdx
+++ b/docs/pages/components/text-input.mdx
@@ -1,13 +1,13 @@
 import { ComponentLayout } from "components/layouts/ComponentLayout";
 import { Example } from "components/examples/Example";
-import { DefaultInput, ErrorInput, HintInput, GroupedInputs, GroupedInputHints } from "components/examples/Input";
+import { DefaultInputExample, DefaultInput, ErrorInput, HintInput, GroupedInputs, GroupedInputHints } from "components/examples/Input";
 
 export const meta = {
 	title: "Text input",
 	description: "The text input lets users enter a single line of text.",
 	npmUrl: "https://www.npmjs.com/package/@nice-digital/nds-input",
 	gitHubUrl: "https://github.com/nice-digital/nice-design-system/blob/main/components/nds-input",
-	component: DefaultInput
+	component: DefaultInputExample
 };
 
 ## When to use
