NDS-497 replace brackets with dashes for WCAG guidline references

--- a/docs/pages/components/text-input.mdx
+++ b/docs/pages/components/text-input.mdx
@@ -258,9 +258,9 @@ Do not show error messages:
 
 Component meets WCAG AA guidelines for accessibility on:
 
-- Text contrast - Text has a contrast ratio of at least 4.5:1 for small text and at least 3:1 for large text (WCAG 2.2 )1.4.3).
-- UI contrast - Visual information required to identify components and states (except inactive components) has a contrast ratio of at least 3:1 (WCAG 2.2 1.4.11).
-- Accessible use of colour - Colour is not used as the only visual means of conveying information (WCAG 2.2 1.4.1).
+- Text contrast - Text has a contrast ratio of at least 4.5:1 for small text and at least 3:1 for large text (WCAG 2.2 - 1.4.3).
+- UI contrast - Visual information required to identify components and states (except inactive components) has a contrast ratio of at least 3:1 (WCAG 2.2 - 1.4.11).
+- Accessible use of colour - Colour is not used as the only visual means of conveying information (WCAG 2.2 - 1.4.1).
 
 
 ## Research/evidence
