NDS-501 add higher contrast border to mobile filter panel (and fix docs typo)

--- a/docs/pages/components/filters.mdx
+++ b/docs/pages/components/filters.mdx
@@ -46,7 +46,7 @@ A filter panel can contain a filter group with a filter by input
 A filter panel can contain a filter group with filter options to select, and/or a filter by input
 
 <Example>
-<h4>Example: filter panl with multiple filters</h4>
+<h4>Example: filter panel with multiple filters</h4>
 <DefaultMultipleFilters />
 </Example>
 
