NDS-511 Add heading level in formgroup docs
- Removed duplicate legend element from code
-Added font-family to legend heading

--- a/docs/pages/components/form-group.mdx
+++ b/docs/pages/components/form-group.mdx
@@ -1,6 +1,6 @@
 import { ComponentLayout } from "components/layouts/ComponentLayout";
 import { Example } from "components/examples/Example";
-import { ExampleGroup, DefaultGroup, InlineGroup, HintsGroup, ErrorGroup } from "components/examples/FormGroup";
+import { ExampleGroup, DefaultGroup, InlineGroup, HintsGroup, ErrorGroup, HeadingLevelGroup } from "components/examples/FormGroup";
 
 export const meta = {
 	title: "Form Group",
@@ -221,6 +221,57 @@ Form group error messages should be styled like this:
 ```
 </CH.Code>
 </Example>
+
+## Form group with Heading Level
+
+You can add a headingLevel to form groups to define the heading level of the legend. The heading level can be selected from h1 to h6. If no heading level is provided, the component falls back to the default behavior.
+
+<Example>
+<HeadingLevelGroup/>
+
+<CH.Code>
+```js React
+<FormGroup legend="Personal information" headingLevel={3}>
+		<Input label="First name" name="firstname-heading-level" />
+		<Input label="Surname" name="surname-heading-level" />
+	</FormGroup>
+```
+```html HTML
+<fieldset class="form-group" data-component="form-group">
+  <legend class="form-group__legend">
+    <h3 class="form-group__heading">Personal information</h3>
+  </legend>
+
+  <div class="input" data-component="input">
+    <label class="input__label" for="firstname-heading-level">
+      First name
+    </label>
+    <input
+      id="firstname-heading-level"
+      name="firstname-heading-level"
+      class="input__input"
+      type="text"
+      value=""
+    />
+  </div>
+
+  <div class="input" data-component="input">
+    <label class="input__label" for="surname-heading-level">
+      Surname
+    </label>
+    <input
+      id="surname-heading-level"
+      name="surname-heading-level"
+      class="input__input"
+      type="text"
+      value=""
+    />
+  </div>
+</fieldset>
+```
+</CH.Code>
+</Example>
+
 
 ## Accessibility
 
