NDS-511 Clarify heading level description for form group component

--- a/docs/pages/components/form-group.mdx
+++ b/docs/pages/components/form-group.mdx
@@ -224,7 +224,7 @@ Form group error messages should be styled like this:
 
 ## Form group with Heading Level
 
-You can add a headingLevel to form groups to define the heading level of the legend. The heading level can be selected from h1 to h6. 
+You can add a headingLevel to form groups to define the heading level of the legend. The value can be set from 1 to 6, corresponding to heading levels h1 through h6.
 
 If no heading level is provided, the component falls back to the default behavior.
 
