NDS-511 Update the documentation for headingLevel based on review comments

--- a/docs/pages/components/form-group.mdx
+++ b/docs/pages/components/form-group.mdx
@@ -222,11 +222,11 @@ Form group error messages should be styled like this:
 </CH.Code>
 </Example>
 
-## Form group with Heading Level
+## Form group with heading level
 
-You can add a headingLevel to form groups to define the heading level of the legend. The value can be set from 1 to 6, corresponding to heading levels h1 through h6.
+You can add `heading` markup to the legend by defining a `headingLevel` value. The value can be set from 1 to 6, corresponding to heading levels h1 through h6.
 
-If no heading level is provided, the component falls back to the default behavior.
+if no `headingLevel` is provided, no heading markup will be applied.
 
 <Example>
 <HeadingLevelGroup/>
