NDS-437 Add nice-cream with new hex value,#ded5ca

--- a/docs/pages/foundations/colour.mdx
+++ b/docs/pages/foundations/colour.mdx
@@ -33,6 +33,7 @@ In code, you should **always use alias tokens**.
 | Name | Value | Swatch |
 | ---- | ----- | ------ |
 | $nice-teal | #228096 | <Swatch colour="#228096" /> |
+| $nice-cream | #ded5ca | <Swatch colour="#ded5ca" /> |
 | $nice-blue | #00436c | <Swatch colour="#00436c" /> |
 | $white: | #fff | <Swatch colour="#fff" /> |
 | $black: | #000 | <Swatch colour="#000" /> |
