--- a/docs/pages/components/textarea.mdx
+++ b/docs/pages/components/textarea.mdx
@@ -47,7 +47,7 @@ Labels must be aligned above the textarea they refer to. They should be short, d
 
 Make the height of a textarea proportional to the amount of text you expect users to enter.
 
-You can set the height of the textarea by specifying the [rows](https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Elements/textarea#rows) attribute in HTML or the rows prop in our react component.
+You can set the height of the textarea by specifying the [rows](https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Elements/textarea#rows) attribute in HTML or the `rows` prop in our react component.
 
 ### Do not disable copy and paste
 
@@ -210,7 +210,7 @@ Error messages should be styled like this:
 
 ## When to use an error message
 
-Only display an error when someone tries to move to the next part of the form or service.
+An error message should only display when someone tries to move to the next part of the form or service.
 
 Do not show error messages:
 
