NDS-496 Add the missing documentation updates

--- a/docs/pages/components/textarea.mdx
+++ b/docs/pages/components/textarea.mdx
@@ -208,6 +208,18 @@ Error messages should be styled like this:
 </CH.Code>
 </Example>
 
+The error message text appears in red after the question text and any hint text.
+
+Do not clear any form fields when showing the error message. Keep both passing and failing answers.
+
+Keeping information that caused errors helps users to:
+
+- see what went wrong
+
+- edit their previous answer
+
+- avoid re-entering information.
+
 ## When to use an error message
 
 An error message should only display when someone tries to move to the next part of the form or service.
