NDS-511 comment error style content with TODO to add back once new error styles are implemented

--- a/docs/pages/components/text-input.mdx
+++ b/docs/pages/components/text-input.mdx
@@ -229,7 +229,9 @@ Error messages are displayed like this:
 </CH.Code>
 </Example>
 
-We use a red border to visually connext the text input, error message and question it belongs to.
+{/* TODO: remove comment when new error border styles are implemented.
+ We use a red border to visually connext the text input, error message and question it belongs to.
+*/}
 
 The error message appears in red after the question text and any hint text.
 
