NDS-511 Update styling for form group component

--- a/docs/pages/components/form-group.mdx
+++ b/docs/pages/components/form-group.mdx
@@ -226,7 +226,7 @@ Form group error messages should be styled like this:
 
 You can add `heading` markup to the legend by defining a `headingLevel` value. The value can be set from 1 to 6, corresponding to heading levels h1 through h6.
 
-if no `headingLevel` is provided, no heading markup will be applied.
+If no `headingLevel` is provided, no heading markup will be applied.
 
 <Example>
 <HeadingLevelGroup/>
